src/objects/Country_Sales_Head__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Sales__c</fullName>
        <label>Country Sales</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging BioPharma</fullName>
                </value>
                <value>
                    <fullName>Mid Sized</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country Sales Head</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Country Sales Head Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Sales Heads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>